RESOLVED FIXED287326
Unreviewed WatchOS build fix after 290060@main
https://bugs.webkit.org/show_bug.cgi?id=287326
Summary Unreviewed WatchOS build fix after 290060@main
Chris Dumez
Reported 2025-02-07 22:35:19 PST
Fix WatchOS build after 290060@main.
Attachments
Chris Dumez
Comment 1 2025-02-07 22:35:20 PST
Chris Dumez
Comment 2 2025-02-07 22:35:48 PST
EWS
Comment 3 2025-02-07 22:38:06 PST
Committed 290078@main (1706a5762420): <https://commits.webkit.org/290078@main> Reviewed commits have been landed. Closing PR #40281 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.