Unreviewed WatchOS build fix after 290060@main https://bugs.webkit.org/show_bug.cgi?id=287326 rdar://144427700

* Source/JavaScriptCore/jit/ExecutableAllocator.h:
(JSC::performJITMemcpy):

Canonical link: https://commits.webkit.org/290078@main