Source/JavaScriptCore/jit/ExecutableAllocator.h
@@ -378,7 +378,9 @@ private:
 
 static inline void* performJITMemcpy(void *dst, const void *src, size_t n)
 {
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN
     return memcpy(dst, src, n);
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
 }
 
 inline bool isJITPC(void*) { return false; }
